@@ -1,2 +1,3 @@
 
+2021-08-02: Fixed flash file parser to skip over license headers.
 2021-08-02: Fixed issue with screenshots when calc reports not ready.
